# finn

./: .gitignore  LICENSE  README.md  biome.json  chatbot_output.db  next.config.js  next.config.mjs  package.json  pnpm-lock.yaml  setup.ps1
backend/: api_service.py  realtime.py  requirements.txt  transcribe.py
mods/: .gitignore
mods/backend/: .gitignore  api_service.py  docker-compose.yaml  docker-compose.yml  start.bat  transcribe.py
mods/backend/nlp/: dockerfile.inference  dockerfile.realtime  dockerfile.train  dockerfile.transcribe  inference.py  intents1.json  intents2.json  intents3.json  intents4.json  intents5.json  preset_ans.py  (+1 more)
public/: site.webmanifest  sw.js.map
scripts/: setup.ps1  start.ps1
src/: actions.ts  interface.ts  middleware.ts  session.ts  utils.ts
src-backend/: api_service.py  docker-compose.yml  realtime.py  requirements.txt  transcribe.py
src-backend/nlp/: dockerfile.realtime  dockerfile.train  dockerfile.transcribe  intents1.json  intents2.json  intents3.json  intents4.json  intents5.json  preset_ans.py
src/app/: .gitignore  globals.css  layout.tsx  next.config.mjs  package.json
src/components/: animated-box.tsx  layout-container.tsx
src/data/: storyboard.json
src/lib/: ai.ts  interface.ts  theme.ts
src/server/: .gitignore  api_service.py  docker-compose.yml  pyproject.toml  realtime.py  transcribe.py
src/server/nlp/: dockerfile.inference  dockerfile.realtime  dockerfile.train  dockerfile.transcribe  inference.py  intents1.json  intents2.json  intents3.json  intents4.json  intents5.json  preset_ans.py  train.py
(+20 files in other folders)
